# rca-platform

./: .env.example  .gitignore  ARCHITECTURE.md  Agent1-Incident-Intake-Implementation.md  Agent2-Knowledge-Retrieval-Implementation.md  Agents-3-6-Implementation.md  CLAUDE.md  Confluence-MCP-Integration.md  FastAPI-Backend-Implementation.md  LLM-and-Redaction-Implementation.md  PROJECT-STRUCTURE.md  PagerDuty-MCP-Integration.md  RCA-Platform-Architecture-Baseline-and-Deltas.md  README.md  ServiceNow-MCP-Integration.md  USAGE.md  Worked-Examples-Agent-Walkthrough.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/architecture_discovery/: agent.py  config.py  errors.py  schemas.py
agents/base/: interfaces.py  parsing.py
agents/communication/: agent.py  config.py  errors.py  prompts.py  schemas.py
agents/intake/: _interfaces.py  agent.py  config.py  errors.py  prompts.py  schemas.py  tools.py
agents/knowledge_retrieval/: _interfaces.py  agent.py  config.py  errors.py  prompts.py  schemas.py  tools.py
agents/rca/: agent.py  config.py  errors.py  prompts.py  schemas.py
agents/recommendation/: agent.py  config.py  errors.py  prompts.py  schemas.py
contracts/: enums.py  models.py  retrieval.py
db/: engine.py  models.py  repositories.py
db/migrations/: 0001_initial.sql
libs/audit/: sink.py
libs/llm/: client.py  config.py  errors.py  types.py
libs/redaction/: redactor.py
mcp_connectors/: contracts.py  http.py
services/api/: app.py  auth.py  config.py  deps.py  errors.py  main.py  schemas.py
tools/: check_imports.py
(+46 files in other folders)
